--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -9,18 +9,29 @@ on:
       - "**"
 
 jobs:
-  release:
-    runs-on: ubuntu-latest
+  build:
     # needs: test
     strategy:
       matrix:
-        # List of GOOS and GOARCH pairs from `go tool dist list`
-        goosarch:
-          - "darwin/amd64"
-          - "darwin/arm64"
-          - "linux/amd64"
-          - "linux/arm64"
-          - "windows/amd64"
+        # List of runners: https://docs.github.com/en/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners#standard-github-hosted-runners-for-public-repositories
+        runner:
+          - name: "macos-latest"
+            suffix: "darwin-arm64"
+
+          - name: "macos-13"
+            suffix: "darwin-amd64"
+
+          - name: "ubuntu-latest"
+            suffix: "linux-amd64"
+
+          - name: "ubuntu-24.04-arm"
+            suffix: "linux-arm64"
+
+          - name: "windows-latest"
+            suffix: "windows-amd64"
+
+    runs-on: ${{ matrix.runner.name }}
+
     steps:
       - name: 🏗 Checkout code
         uses: actions/checkout@v4
@@ -30,20 +41,12 @@ jobs:
         with:
           go-version: "1.22"
 
-      - name: 🏗 Set up Go environment
-        id: "go-env"
-        run: |
-          GOOSARCH=${{matrix.goosarch}}
-          GOOS=${GOOSARCH%/*}
-          GOARCH=${GOOSARCH#*/}
-          BINARY_NAME=${{github.repository}}-$GOOS-$GOARCH
-          echo "binary-name=$BINARY_NAME" >> $GITHUB_OUTPUT
-          echo "goos=$GOOS" >> $GITHUB_OUTPUT
-          echo "goarch=$GOARCH" >> $GITHUB_OUTPUT
-
       - name: 🏗 Build binary
-        run: go build -o "${{steps.go-env.outputs.binary-name}}" -v
+        run: go build -o "${{github.repository}}-${{matrix.runner.suffix}}" -v
 
+  release:
+    runs-on: ubuntu-latest
+    steps:
       - name: 🏗 Get release info
         id: query-release-info
         uses: release-flow/keep-a-changelog-action@v3
@@ -59,4 +62,4 @@ jobs:
           # prerelease: true
           fail_on_unmatched_files: true
           preserve_order: true
-          files: ${{steps.go-env.outputs.binary-name}}
+          files: ${{github.repository}}-*
