--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,7 +10,6 @@ on:
 
 jobs:
   build:
-    # needs: test
     strategy:
       matrix:
         # List of runners: https://docs.github.com/en/actions/using-github-hosted-runners/using-github-hosted-runners/about-github-hosted-runners#standard-github-hosted-runners-for-public-repositories
@@ -45,7 +44,10 @@ jobs:
         run: go build -o "${{github.repository}}-${{matrix.runner.suffix}}" -v
 
   release:
+    needs: build
+
     runs-on: ubuntu-latest
+
     steps:
       - name: 🏗 Get release info
         id: query-release-info
